# sitegen

./: .gitignore  cli.py  pyproject.toml  requirements.txt  run_loader.py
site/: config.toml  content.toml  overrides.py
site/static/javascripts/: tailwind_config.js
site/templates/: _base.html.jinja  about.html.jinja  index.html.jinja  misc.html.jinja  research.html.jinja
sitegen/: __init__.py  build.py  config.py  devserver.py  renderer.py  utils.py
sitegen/extensions/: __init__.py  template.py
sitegen/loaders/: content.py
